--- a/src/html/styles/flash-messages.css
+++ b/src/html/styles/flash-messages.css
@@ -1,79 +1,77 @@
-@layer components {
-  .flash-messages {
-    position: fixed;
-    bottom: 48px;
-    left: 50%;
-    transform: translate(-50%, 0);
+@utility flash-messages {
+  position: fixed;
+  bottom: 48px;
+  left: 50%;
+  transform: translate(-50%, 0);
 
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 12px;
+
+  .message {
+    width: 640px;
+    border-radius: 4px;
+    box-shadow: 0px 29px 37px 3px rgba(0, 0, 0, 0.4);
     display: flex;
-    flex-flow: column nowrap;
-    gap: 12px;
+    flex-direction: column;
+    padding: 0;
 
-    .message {
-      width: 640px;
-      border-radius: 4px;
-      box-shadow: 0px 29px 37px 3px rgba(0, 0, 0, 0.4);
+    .content {
       display: flex;
-      flex-direction: column;
-      padding: 0;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: center;
+      padding: 12px 24px;
+      font-weight: 700;
+      font-size: 16px;
+      color: var(--color-ash);
+    }
 
-      .content {
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        justify-content: center;
-        padding: 12px 24px;
-        font-weight: 700;
-        font-size: 16px;
-        color: theme(colors.ash);
-      }
+    progress[value] {
+      appearance: none;
+      border: none;
+      overflow: hidden;
+      border-radius: 0 0 4px 4px;
+      width: 640px;
+      height: 4px;
+    }
+
+    &.success {
+      background-color: #0a955b;
 
       progress[value] {
-        appearance: none;
-        border: none;
-        overflow: hidden;
-        border-radius: 0 0 4px 4px;
-        width: 640px;
-        height: 4px;
-      }
+        background-color: #087749;
 
-      &.success {
-        background-color: #0a955b;
+        &::-webkit-progress-bar {
+          background: #087749;
+        }
 
-        progress[value] {
-          background-color: #087749;
+        &::-webkit-progress-value {
+          background: #5db08d;
+        }
 
-          &::-webkit-progress-bar {
-            background: #087749;
-          }
-
-          &::-webkit-progress-value {
-            background: #5db08d;
-          }
-
-          &::-moz-progress-bar {
-            background: #5db08d;
-          }
+        &::-moz-progress-bar {
+          background: #5db08d;
         }
       }
+    }
 
-      &.error {
-        background-color: #950a0a;
+    &.error {
+      background-color: #950a0a;
 
-        progress[value] {
-          background-color: #770808;
+      progress[value] {
+        background-color: #770808;
 
-          &::-webkit-progress-bar {
-            background: #770808;
-          }
+        &::-webkit-progress-bar {
+          background: #770808;
+        }
 
-          &::-webkit-progress-value {
-            background: #b05d5d;
-          }
+        &::-webkit-progress-value {
+          background: #b05d5d;
+        }
 
-          &::-moz-progress-bar {
-            background: #b05d5d;
-          }
+        &::-moz-progress-bar {
+          background: #b05d5d;
         }
       }
     }
