--- a/src/html/styles/switch.css
+++ b/src/html/styles/switch.css
@@ -1,47 +1,45 @@
-@layer components {
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 47px;
-    height: 24px;
+@utility switch {
+  position: relative;
+  display: inline-block;
+  width: 47px;
+  height: 24px;
 
-    input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
 
-    .slider {
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--color-abru-light-20);
+    transition: 0.4s;
+    border-radius: 34px;
+
+    &:before {
       position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: theme(colors.abru.light.20);
+      content: '';
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      top: 3px;
+      background-color: var(--color-abru-dark-25);
       transition: 0.4s;
-      border-radius: 34px;
-
-      &:before {
-        position: absolute;
-        content: '';
-        height: 18px;
-        width: 18px;
-        left: 3px;
-        top: 3px;
-        background-color: theme(colors.abru.dark.25);
-        transition: 0.4s;
-        border-radius: 50%;
-        z-index: 20;
-      }
+      border-radius: 50%;
+      z-index: 20;
     }
+  }
 
-    input:checked + .slider {
-      background-color: theme(colors.accent.DEFAULT);
-    }
+  input:checked + .slider {
+    background-color: var(--color-accent);
+  }
 
-    input:checked + .slider:before {
-      transform: translateX(23px);
-    }
+  input:checked + .slider:before {
+    transform: translateX(23px);
   }
 }
