--- a/src/queue/views/html/style.css
+++ b/src/queue/views/html/style.css
@@ -1,7 +1,9 @@
-@import 'accept-rules-dialog.css';
-@import 'chat.css';
-@import 'map-vote.css';
-@import 'online-player-list.css';
-@import 'queue-slot.css';
-@import 'sidebar.css';
-@import 'stream-list.css';
+@reference '../../../html/styles/main.css';
+
+@import './accept-rules-dialog.css';
+@import './chat.css';
+@import './map-vote.css';
+@import './online-player-list.css';
+@import './queue-slot.css';
+@import './sidebar.css';
+@import './stream-list.css';
