--- a/src/html/styles/pagination.css
+++ b/src/html/styles/pagination.css
@@ -1,31 +1,29 @@
-@layer utilities {
-  .page {
-    height: 32px;
-    min-width: 28px;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    vertical-align: middle;
-    font-weight: 500;
-    border-radius: 4px;
-    color: theme(colors.white);
-    cursor: pointer;
+@utility page {
+  height: 32px;
+  min-width: 28px;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  vertical-align: middle;
+  font-weight: 500;
+  border-radius: 4px;
+  color: var(--color-white);
+  cursor: pointer;
 
-    &:hover {
-      background-color: theme(colors.abru.light.10);
-    }
+  &:hover {
+    background-color: var(--color-abru-light-10);
   }
+}
 
-  .page--active {
-    background-color: theme(colors.abru.light.15);
-  }
+@utility page--active {
+  background-color: var(--color-abru-light-15);
+}
 
-  .page--disabled {
-    color: theme(colors.abru.light.15);
-    cursor: default;
+@utility page--disabled {
+  color: var(--color-abru-light-15);
+  cursor: default;
 
-    &:hover {
-      background-color: initial;
-    }
+  &:hover {
+    background-color: initial;
   }
 }
